security_group.tf
resource "aws_security_group" "security_group_public" {
  name        = "allow_web"
  description = "Allow web traffic"
  vpc_id = aws_vpc.ecommerce-vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 4200
    to_port          = 4200
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }
ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  tags = {
    Name = "ecommerce_public"
  }
}
resource "aws_security_group" "security_group_private" {
  name        = "allow_spring"
  description = "Allow spring access"
  vpc_id = aws_vpc.ecommerce-vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 8443
    to_port          = 8443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }
  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  tags = {
    Name = "ecommerce_private"
  }
}
